# babylon

./: .gitignore  .gitmodules  BUILD_NOTES.md  CMakeLists.txt  Makefile  README.md
.github/workflows/: build-android.yml  build-linux.yml  build-macos.yml  build-manual.yml  build-python.yml  build-windows.yml
cli/: CMakeLists.txt  config.json  index.html  main.cpp
data/: config.json  index.html
docs/: manual.tex
example/: main.c  main.cpp
include/: babylon.h
scripts/onnx/: add_timing_output.py
src/: babylon.cpp  phonemizer.cpp  voice.cpp
src/cli/: CMakeLists.txt  main.cpp
src/lib/: babylon.cpp  cleaners.cpp  path_utils.h  phonemizer.cpp  voice.cpp
wrappers/: babylon.py
